--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,32 @@ dmypy.json
 
 # extra stuff
 db_backups/
+
+
+#######################################################################
+# React/JS Ignored Files
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.env
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
