--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -25,6 +25,7 @@
     "react-draft-wysiwyg": "^1.14.5",
     "react-material-ui-carousel": "^1.6.0",
     "react-quill": "^1.3.5",
+    "react-recaptcha": "^2.3.10",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scrollbar": "^0.5.6",
