--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.4.1",
     "date-fns": "^2.15.0",
     "dotenv": "^8.2.0",
+    "glamor": "^2.20.40",
     "lodash": "^4.17.19",
     "material-table": "^1.66.0",
     "moment": "^2.27.0",
@@ -29,6 +30,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scrollbar": "^0.5.6",
+    "react-toastify": "^6.0.8",
     "react-virtualized": "^9.21.2",
     "styled-components": "^5.1.1"
   },
