--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -5,6 +5,7 @@ django-environ==0.4.5
 django-extensions==3.0.2
 django-filter==2.0.0
 django-localflavor==3.0.1
+django-rosetta==0.9.4
 django-sendsms==0.3.1
 djangorestframework==3.11.0
 drf-user==0.0.8
